--- a/DaivaFramework/pom.xml
+++ b/DaivaFramework/pom.xml
@@ -45,4 +45,40 @@
 
 
 	</dependencies>
+	
+	<build>
+	
+	<plugins>
+ 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+   
+        <artifactId>maven-surefire-plugin</artifactId>
+        
+        <version>3.0.0-M3</version>
+        
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>XMLFiles/testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+        
+       
+        
+        
+        </configuration>    
+            
+        
+                      
+
+      </plugin>
+  
+</plugins>
+</build>
+
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mainClass>com.enterprise.mainPacket.MainApp</mainClass>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
 </project>
